// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return theme data for slug 8-depart-de-lentreprise 1`] = `
Object {
  "breadcrumbs": Array [],
  "children": Array [
    Object {
      "label": "Documents à remettre au salarié",
      "slug": "/themes/80-documents-a-remettre-au-salarie",
    },
    Object {
      "label": "Démission",
      "slug": "/themes/81-demission",
    },
    Object {
      "label": "Fin d'un CDD - CTT",
      "slug": "/themes/82-fin-dun-cdd-ctt",
    },
    Object {
      "label": "Rupture conventionnelle",
      "slug": "/themes/83-rupture-conventionnelle",
    },
    Object {
      "label": "Licenciement",
      "slug": "/themes/84-licenciement",
    },
    Object {
      "label": "Retraite",
      "slug": "/themes/85-retraite",
    },
    Object {
      "label": "Autres départs",
      "slug": "/themes/86-autres-departs",
    },
  ],
  "position": 8,
  "refs": Array [
    Object {
      "source": "external",
      "title": "",
      "url": "/fiche-service-public/peut-on-garder-la-mutuelle-de-lentreprise-a-la-fin-du-contrat-de-travail",
    },
    Object {
      "source": "external",
      "title": "",
      "url": "/fiche-service-public/indemnite-compensatrice-de-preavis",
    },
    Object {
      "source": "external",
      "title": "",
      "url": "/fiche-service-public/indemnite-compensatrice-de-conges-payes",
    },
    Object {
      "source": "external",
      "title": "Le salarié peut-il s’absenter pour rechercher un emploi pendant son préavis ?",
      "url": "/contribution/le-salarie-peut-il-sabsenter-pour-rechercher-un-emploi-pendant-son-preavis",
    },
    Object {
      "source": "external",
      "title": "Heures pour recherche d’emploi",
      "url": "/outils/heures-recherche-emploi",
    },
    Object {
      "source": "external",
      "title": "Quelles sont les conséquences du non-respect du préavis par le salarié ou l'employeur ?",
      "url": "/contribution/quelles-sont-les-consequences-du-non-respect-du-preavis-par-le-salarie-ou-lemployeur",
    },
    Object {
      "source": "external",
      "title": "Démission, licenciement : peut-on travailler ailleurs avant la fin du préavis ?",
      "url": "/fiche-service-public/demission-licenciement-peut-on-travailler-ailleurs-avant-la-fin-du-preavis",
    },
    Object {
      "source": "external",
      "title": "Arrêt maladie pendant le préavis : quelles conséquences ?",
      "url": "/contribution/arret-maladie-pendant-le-preavis-quelles-consequences",
    },
    Object {
      "source": "external",
      "title": " Quelle est la durée de préavis en cas de mise à la retraite ?",
      "url": "/contribution/quelle-est-la-duree-de-preavis-en-cas-de-mise-a-la-retraite",
    },
  ],
  "slug": "8-depart-de-lentreprise",
  "title": "Départ de l'entreprise",
}
`;

exports[`return themes root themes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "label": "Embauche",
          "slug": "/themes/11-embauche",
        },
        Object {
          "label": "Contrat de travail",
          "slug": "/themes/12-contrat-de-travail",
        },
      ],
      "icon": "Contract",
      "position": 1,
      "slug": "1-embauche-et-contrat-de-travail",
      "title": "Embauche et contrat de travail",
    },
    Object {
      "children": Array [
        Object {
          "label": "Documents à remettre au salarié",
          "slug": "/themes/80-documents-a-remettre-au-salarie",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/81-demission",
        },
        Object {
          "label": "Fin d'un CDD - CTT",
          "slug": "/themes/82-fin-dun-cdd-ctt",
        },
        Object {
          "label": "Rupture conventionnelle",
          "slug": "/themes/83-rupture-conventionnelle",
        },
        Object {
          "label": "Licenciement",
          "slug": "/themes/84-licenciement",
        },
        Object {
          "label": "Retraite",
          "slug": "/themes/85-retraite",
        },
        Object {
          "label": "Autres départs",
          "slug": "/themes/86-autres-departs",
        },
      ],
      "icon": "Depart",
      "position": 8,
      "slug": "8-depart-de-lentreprise",
      "title": "Départ de l'entreprise",
    },
  ],
}
`;
